[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/genshin2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/CharMainStatLabel.gd" type="Script" id=2]
[ext_resource path="res://images/icons/help_light.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 896.0
margin_bottom = 64.0
script = ExtResource( 2 )

[node name="IconImage" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 64.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="NameLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 14.0
margin_right = 468.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Name"
valign = 1

[node name="StatLabel" type="Label" parent="."]
margin_left = 472.0
margin_top = 14.0
margin_right = 896.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Value"
align = 2
valign = 1
